--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -32,6 +32,7 @@
         import {setMessage} from "../../static/js/message.js";
 
         document.addEventListener('DOMContentLoaded', () => {
+            const csrfToken = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
             const form = document.getElementById('password-form')
             form.addEventListener('submit', async function (e) {
                 e.preventDefault()
@@ -48,10 +49,9 @@
                 if (confirm !== password) {
                     setMessage('Пароли не совпадают', true)
                 }
-                const token = "{{ token }}"
                 const response = await fetch("{{ url_for('reset_password.reset_password', token=token) }}", {
                     method: "POST",
-                    headers: {"Content-Type": "application/json"},
+                    headers: {"Content-Type": "application/json", 'X-CSRFToken': csrfToken},
                     body: JSON.stringify({'password': password, 'confirm': confirm})
                 })
                 if (!!response.status && response.status === 200) {
