--- a/app/templates/edit_note.html
+++ b/app/templates/edit_note.html
@@ -51,6 +51,7 @@
         <div class="form-container" style="width: fit-content; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
             <div class="form-content">
                 <form method="post" action="{% if note %}{{ url_for('edit_note.edit_note', note_id=note['note_id']) }}{% else %}{{ url_for('add_note.add_note') }}{% endif %}" class="form">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                     <div class="form-elem">
                         <label for="title">Название</label>
                         <input class="field" type="text" name="title" id="title">
